<resources>
    <string name="app_name">Beth</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_blocks">Blocks</string>
    <string name="menu_more">More</string>
    <string name="menu_email">Feedback</string>
    <string name="main_top_eth_price_title">Ether Price</string>
    <string name="main_top_eth_market_title">Market Cap</string>
    <string name="main_top_latest_block_title">Latest Block</string>
    <string name="main_top_difficulty_title">Difficulty</string>
    <string name="main_top_loading">Loading</string>
    <string name="id_channel_mainsync" translatable="false">mainsync</string>
    <string name="name_block_sync">BlockSync</string>
    <string name="name_block_sync_desc">Block information synchronization service</string>
    <string name="tag_price" translatable="false">price</string>
    <string name="tag_mktcap" translatable="false">mktcap</string>
    <string name="tag_latest" translatable="false">latest</string>
    <string name="tag_difficult" translatable="false">difficult</string>
    <string name="main_top_no_data">No Data</string>
    <string name="action_mtv_refresh" translatable="false">com.chen.beth.mtv_refresh</string>
    <string name="extra_type" translatable="false">type</string>
    <string name="main_top_no_network">No network connection detected</string>
    <string name="transaction_chart_title">Recent trading volume</string>
    <string name="main_bt_no_date_refresh">Temporarily without data, click refresh</string>
    <string name="main_bt_more">View all blocks</string>
    <string name="block_info_numer">Number :</string>
    <string name="block_info_miner">Miner :</string>
    <string name="block_info_txs_date">Transactions : %1$d , Date : %2$s</string>
    <string name="block_info_eth" translatable="false"> Eth</string>
    <string name="price_history">Historical price of Ether</string>
    <string name="data_source">"The data source : "</string>
    <string name="crypto_compare" translatable="false">CryptoCompare</string>
    <string name="crypto_compare_website" translatable="false">https://www.cryptocompare.com/</string>
    <string name="eth_mketcap">Ether supply details</string>
    <string name="shared_element_price" translatable="false">price</string>
    <string name="shared_element_mktcap" translatable="false">mktcap</string>
    <string name="shared_element_search_tx" translatable="false">search_tx</string>
    <string name="shared_element_search_account" translatable="false">search_account</string>
    <string name="shared_element_search_block" translatable="false">search_blocks</string>
    <string name="shared_element_result_block" translatable="false">result_block</string>
    <string name="label_genesis">Genesis block</string>
    <string name="label_block">Block reward</string>
    <string name="label_uncle">UncleBlock reward</string>
    <string name="ethio_api_name" translatable="false">Etherscan.io APIs</string>
    <string name="ethio_api_website" translatable="false">https://etherscan.io/apis</string>
    <string name="label_total">Total supply</string>
    <string name="ether">Ether</string>
    <string name="label_block_chain">BlockChain</string>
    <string name="label_block_details">Block details</string>
    <string name="detail_time">Time</string>
    <string name="detail_tx">Transaction</string>
    <string name="detail_miner">Miner</string>
    <string name="detail_reward">Reward</string>
    <string name="detail_block_uncle_reward">Uncle Reward</string>
    <string name="detail_difficult">Difficult</string>
    <string name="detail_total_difficule">Toatal difficult</string>
    <string name="detail_size">Size</string>
    <string name="detail_gas_used">Gas used</string>
    <string name="detail_gas_limit">Gas Limit</string>
    <string name="detail_extra">Extra</string>
    <string name="miner_mark">Mark</string>
    <string name="miner_mark_hint">Please enter an account alias</string>
    <string name="info_no_input">No input, no modification</string>
    <string name="info_byte">Bytes</string>
    <string name="info_copy">Copy</string>
    <string name="info_copy_toast">Copied to the paste board</string>
    <string name="bt_mark">Mark</string>
    <string name="bt_remove">Remove annotation</string>
    <string name="bt_return">Return</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_transaction">Transaction query</string>
    <string name="search_account">Account query</string>
    <string name="search_block">Block query</string>
    <string name="search_history">Historical</string>
    <string name="edit_warn">Do not input too much</string>
    <string name="hint_tx">Please input transaction hash</string>
    <string name="hint_account">Please input account address</string>
    <string name="hint_block">Please input block number</string>
    <string name="error_block">Please enter the correct block number</string>
    <string name="err_tx_length">A Hash value of 64 characters is required</string>
    <string name="error_hash">Please enter the correct hexadecimal character</string>
    <string name="error_account_length">The account address should consist of 40 characters</string>
    <string name="dialog_title_miner_mark">Account alias</string>
    <string name="tx_hash">Hash</string>
    <string name="tx_time">Timestamp</string>
    <string name="tx_block">Block</string>
    <string name="tx_from">From</string>
    <string name="tx_to">To</string>
    <string name="tx_value">Value</string>
    <string name="tx_gas">Gas</string>
    <string name="tx_gas_price">GasPrice</string>
    <string name="tx_nonce">Nonce</string>
    <string name="tx_index">Index</string>
    <string name="tx_r">r</string>
    <string name="tx_s">s</string>
    <string name="tx_v">v</string>
    <string name="tx_input">Input</string>
    <string name="tx_fee">Fee</string>
    <string name="label_transaction_result">Transaction</string>
    <string name="bt_search_no_data">The data queried does not exist</string>
    <string name="history_tx">"Transaction : "</string>
    <string name="history_account">"Account : "</string>
    <string name="history_block">"Block : "</string>
    <string name="miner_none">None</string>
    <string name="labe_block_result">Block Result</string>
    <string name="detail_number">Number</string>
    <string name="block_no_tx">There are no transactions on the block</string>
    <string name="block_result_from">From</string>
    <string name="block_result_to">To</string>
    <string name="delete_all_title">Delete all history</string>
    <string name="delete_adll_title_content">Whether to delete all history？</string>
    <string name="delete_all_ok">Delete</string>
    <string name="delete_all_cancel">Cancel</string>
    <string name="no_history">No historical records available</string>
    <string name="account_balance">The account balance</string>
    <string name="account_detail">Account detail</string>
    <string name="refresh">Refresh</string>
    <string name="account_block">Mined blocks</string>
    <string name="account_transaction">Transactions</string>
    <string name="no_content">No content</string>
    <string name="account_blocks_item_1">Time:</string>
    <string name="account_blocks_item_2">Mined:</string>
    <string name="favorite_all">All</string>
    <string name="favorite_tx">Transaction</string>
    <string name="favorite_account">Account</string>
    <string name="favorite_blocks">Block</string>
    <string name="no_favorite">No favorite</string>
    <string name="delete_all_favorite">Whether to delete all favorite records</string>
    <string name="delete_all_favorite_title">Delete all favorites</string>
    <string name="setting_clear">Clear all caches</string>
    <string name="setting_backend">Notification setting</string>
    <string name="setting_backend_content">It will display the latest status of ethereum continuously in the notification bar</string>
    <string name="setting_clear_msg">Whether to clean all caches</string>
    <string name="clear_finish">Clear finish</string>

</resources>
