<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/blockChainFragment"
            android:icon="@drawable/ic_menu_blocks"
            android:title="@string/menu_blocks" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/menu_more" android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/menu_email" />
        </menu>
    </item>

</menu>
