<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.chen.beth.blockdetailsfragment.BlockDetailsDataBinding" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/main_linearlayout_bg">


            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{data.number}"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="50dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_number" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <TextView
                android:id="@+id/tv_time_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />


            <TextView
                android:id="@+id/tv_time_content"
                style="@style/DetailsTvContent"
                android:text="@{data.time}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_tx_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_tx"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_time_title" />

            <TextView
                android:id="@+id/tv_tx_content"
                style="@style/DetailsTvContent"
                android:text="@{data.txs}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_time_content" />

            <TextView
                android:id="@+id/tv_miner_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_miner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tx_title" />

            <TextView
                android:id="@+id/tv_miner_content"
                style="@style/DetailsTvContent"
                android:background="?android:attr/selectableItemBackground"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@{data.miner}"
                android:textColor="@color/colorPrimary"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_tx_content" />

            <ImageButton
                android:id="@+id/ib_miner_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_edit"
                app:layout_constraintTop_toBottomOf="@id/tv_tx_content"
                app:layout_constraintLeft_toRightOf="@id/tv_miner_content"
                />

            <TextView
                android:id="@+id/tv_reward_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_reward"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_miner_title" />

            <TextView
                android:id="@+id/tv_reward_content"
                style="@style/DetailsTvContent"
                android:text="@{data.reward}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_miner_content" />

            <TextView
                android:id="@+id/tv_uncle_reward_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_block_uncle_reward"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reward_title" />

            <TextView
                android:id="@+id/tv_uncle_reward_content"
                style="@style/DetailsTvContent"
                android:text="@{data.uncleReward}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_reward_content" />

            <TextView
                android:id="@+id/tv_difficulty_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_difficult"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_uncle_reward_title" />

            <TextView
                android:id="@+id/tv_difficulty_content"
                style="@style/DetailsTvContent"
                android:text="@{data.difficult}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_uncle_reward_content" />

            <TextView
                android:id="@+id/tv_total_difficulty_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_total_difficule"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_difficulty_title" />

            <TextView
                android:id="@+id/tv_total_difficulty_content"
                style="@style/DetailsTvContent"
                android:text="@{data.totalDifficult}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_difficulty_content" />

            <TextView
                android:id="@+id/tv_size_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total_difficulty_title" />

            <TextView
                android:id="@+id/tv_size_content"
                style="@style/DetailsTvContent"
                android:text="@{data.size}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_total_difficulty_content" />

            <TextView
                android:id="@+id/tv_gas_used_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_gas_used"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_size_title" />

            <TextView
                android:id="@+id/tv_gas_used_content"
                style="@style/DetailsTvContent"
                android:text="@{data.gasUsed}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_size_content" />

            <TextView
                android:id="@+id/tv_gas_limit_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_gas_limit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gas_used_title" />

            <TextView
                android:id="@+id/tv_gas_limit_content"
                style="@style/DetailsTvContent"
                android:text="@{data.gasLimit}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_gas_used_content" />

            <TextView
                android:id="@+id/tv_extra_title"
                style="@style/DetailsTVTitle"
                android:text="@string/detail_extra"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gas_limit_title" />

            <TextView
                android:id="@+id/tv_extra_content"
                style="@style/DetailsTvContent"
                android:text="@{data.extra}"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_gas_limit_content" />

            <TextView
                android:id="@+id/tv_hash_title"
                style="@style/DetailsTVTitle"
                android:text="Hash"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_extra_title" />

            <TextView
                android:id="@+id/tv_hash_content"
                style="@style/DetailsTvContent"
                android:background="?android:attr/selectableItemBackground"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@{data.hash}"
                android:textColor="@color/colorPrimary"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_extra_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>